# nature-of-code

./: Cargo.toml  README.md
angular-example/: Cargo.toml
angular-example/src/: main.rs
attractor-example/: Cargo.toml
attractor-example/src/: main.rs
box2d-example/: Cargo.toml
box2d-example/src/: main.rs
cellular-automata/: Cargo.toml
cellular-automata/src/: main.rs
chapter01-1/: Cargo.toml
chapter01-1/src/: main.rs
chapter01-2/: Cargo.toml
chapter01-2/src/: main.rs
chapter01/example1/: Cargo.toml
chapter01/example1/src/: main.rs
chapter01/example2/: Cargo.toml
chapter01/example4/: Cargo.toml
chapter01/example4/src/: main.rs
chapter01/exercise4/: Cargo.toml
chapter01/exercise4/src/: main.rs
chapter01/exercise4_2/: Cargo.toml
chapter01/exercise4_2/src/: main.rs
chapter01/exercise5/: Cargo.toml
chapter01/exercise5/src/: main.rs
chapter02/exercise1/: Cargo.toml
chapter02/exercise1/src/: main.rs
chapter03/example1/: Cargo.toml
chapter03/example1/src/: main.rs
chapter03/exercise4/: Cargo.toml
chapter03/exercise4/src/: main.rs
core/: Cargo.toml
core/src/: input.rs  lib.rs  math.rs  shapes.rs
ecosystem/: Cargo.toml  README.md
ecosystem-genetic/: Cargo.toml  README.md
ecosystem-genetic/src/: main.rs
ecosystem-genetic/src/components/: mod.rs
ecosystem-genetic/src/resources/: mod.rs
ecosystem-rapier/: Cargo.toml
ecosystem-rapier/src/: main.rs  util.rs
ecosystem-rapier/src/bundles/: creatures.rs  environment.rs  mod.rs  particles.rs  physics.rs
ecosystem-rapier/src/components/: creatures.rs  environment.rs  mod.rs  particles.rs  physics.rs
ecosystem-rapier/src/plugins/: creatures.rs  debug.rs  environment.rs  mod.rs  particles.rs  physics.rs
ecosystem-rapier/src/resources/: debug.rs  mod.rs
ecosystem-rapier/src/states/: game.rs  mod.rs
ecosystem-rapier/src/systems/: creatures.rs  debug.rs  environment.rs  particles.rs  physics.rs
ecosystem/src/: main.rs  util.rs
ecosystem/src/bundles/: creatures.rs  environment.rs  mod.rs  particles.rs  physics.rs
ecosystem/src/components/: camera.rs  creatures.rs  debug.rs  environment.rs  mod.rs  particles.rs  physics.rs
ecosystem/src/events/: debug.rs  mod.rs
ecosystem/src/plugins/: mod.rs  particles.rs
ecosystem/src/resources/: creatures.rs  debug.rs  mod.rs
ecosystem/src/states/: game.rs
ecosystem/src/systems/: creatures.rs  debug.rs  environment.rs  mod.rs  particles.rs  physics.rs
example/: Cargo.toml
example/src/: main.rs
fractal-example/: Cargo.toml
fractal-example/src/: main.rs
game-of-life/: Cargo.toml
game-of-life/src/: main.rs
genetic-algorithm/: Cargo.toml
genetic-algorithm/src/: main.rs
intro/example1/: Cargo.toml
intro/example1/src/: main.rs
intro/example2/: Cargo.toml
intro/example2/src/: main.rs
intro/example4/: Cargo.toml
intro/example4/src/: main.rs
intro/exercise4/: Cargo.toml
intro/exercise4/src/: main.rs
intro/exercise4_2/: Cargo.toml
intro/exercise4_2/src/: main.rs
intro/exercise5/: Cargo.toml
intro/exercise5/src/: main.rs
l-system-example/: Cargo.toml
l-system-example/src/: main.rs
liquid-example/: Cargo.toml
liquid-example/src/: main.rs
mover-example/: Cargo.toml
mover-example/src/: main.rs
mutual-attractor-example/: Cargo.toml
mutual-attractor-example/src/: main.rs
network/: Cargo.toml
network/src/: main.rs
oscillator-example/: Cargo.toml
oscillator-example/src/: main.rs
particle-system/: Cargo.toml
particle-system/src/: main.rs
pendulum-example/: Cargo.toml
pendulum-example/src/: main.rs
perceptron/: Cargo.toml
perceptron/src/: main.rs
perlin-example/: Cargo.toml
perlin-example/src/: main.rs
polar-example/: Cargo.toml
polar-example/src/: main.rs
processing-rs-example/: Cargo.toml
processing-rs-example/src/: main.rs
smart-rocket/: Cargo.toml
smart-rocket/src/: main.rs
spaceship-example/: Cargo.toml
spaceship-example/src/: main.rs
spring-example/: Cargo.toml
spring-example/src/: main.rs
vector-example/: Cargo.toml
vector-example/src/: main.rs
vehicle-example/: Cargo.toml
vehicle-example/src/: main.rs
wave-example/: Cargo.toml
wave-example/src/: main.rs
