[workspace]

members = [
    "core",
    "ecosystem",
    "example",
    "perlin-example",
    "vector-example",
    "liquid-example",
    "attractor-example",
    "intro/example1",
    "intro/example2",
    "intro/example4",
    "intro/exercise4",
    "intro/exercise4_2",
    "intro/exercise5",
    "chapter02/exercise1",
]
