[workspace]

members = [
    "processing-rs-example",

    "core",

    # usage / basic examples
    "example",
    "vector-example",
    "perlin-example",
    "polar-example",
    "oscillator-example",
    "wave-example",
    "pendulum-example",
    "box2d-example",

    # mover examples
    "liquid-example",
    "attractor-example",
    "mutual-attractor-example",
    "angular-example",
    "spaceship-example",
    "spring-example",

    # particle system
    "particle-system",

    # vehicle
    "vehicle-example",

    # cellular automata
    "cellular-automata",

    # chapters
    "intro/example1",
    "intro/example2",
    "intro/example4",
    "intro/exercise4",
    "intro/exercise4_2",
    "intro/exercise5",
    "chapter02/exercise1",
    "chapter03/example1",
    "chapter03/exercise4",

    # final project
    "ecosystem",
    "ecosystem-rapier",
]
