[package]
name = "box2d-example"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
processing = "0.3"
rand = "0.8"
wrapped2d = "0.4"

[dependencies.core]
path = "../core"
