[package]
name = "chapter01-2"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7"
processing = "0.3"
rand = "0.8"

[dependencies.core]
path = "../core"
