[package]
name = "core"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26"
noise = "0.7"
once_cell = "1.7"
processing = "0.3"
rand = "0.8"
