[package]
name = "core"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.14"
noise = "0.7"
num-traits = "0.2"
once_cell = "1.7"
processing = "0.3"
rand = "0.8"
