[package]
name = "ecosystem-genetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_egui = "0.10"
bevy-inspector-egui = "0.7"
noise = "0.7"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
