[package]
name = "ecosystem-rapier"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_egui = "0.10"
#bevy-inspector-egui = { version = "0.7", features = [ "rapier2d" ] }
bevy-inspector-egui = "0.7"
bevy_prototype_lyon = "0.4"
bevy_rapier2d = { version = "0.12", features = [ "simd-stable", "parallel", "serde-serialize" ] }
derivative = "2.2"
noise = "0.7"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
