[package]
name = "ecosystem"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_egui = "0.4"
bevy-inspector-egui = "0.5"
bevy_prototype_lyon = "0.3"
derivative = "2.2"
noise = "0.7"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
