[package]
name = "particle-system"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.14"
processing = "0.3"
rand = "0.8"
rand_distr = "0.4"

[dependencies.core]
path = "../core"
