[package]
name = "processing-rs-example"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
processing = "0.3"
rand = "0.8"
rand_distr = "0.4"
time = "0.2"
