[package]
name = "chapter02-exercise1"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26"
processing = "0.3"

[dependencies.core]
path = "../../core"
